<resources>

    //landing page
    <string name="app_name">Njia</string>
    <string name="logo_name">Njia</string>
    <string name="slogan_name">Find your way anywhere</string>
    <string name="catch_phrase">Powered by Dame-Techie</string>

    //slides
    <string name="search">Search for Your Location</string>
    <string name="call">Make A Call</string>
    <string name="missing">Add Missing Places</string>
    <string name="start">Explore!!!</string>
    <string name="Button">Lets Get Started</string>
    <string name="skipButton">Skip</string>

    //Slides description
    <string name="searchD">New place? DO not get lost. Use Njia to help you find your way around. Your personal tour guide in your hands.</string>
    <string name="callD">We have the best customer care service and contacts to the coolest places. Need some help? we got your back.</string>
    <string name="missingD">It is not unlikely that you will find a hidden gem out on these streets. Add it up and find it the next time round.</string>
    <string name="explore">Your all set up. Buckle find out what this place has to offer. Enjoy. </string>

    //User Dashboard
    <string name="searchText">Search...</string>
    <string name="restaurant">Restaurant</string>
    <string name="hospital">Hospital</string>
    <string name="shops">Shops</string>
    <string name="airPorts">Airports</string>
    <string name="featured">FEATURED LOCATIONS</string>
    <string name="featuredDes">Here are some of the most popular places around you. Explore...</string>
    <string name="popular">Most Visited Places</string>
    <string name="view">View All</string>
    <string name="categories">Categories</string>

    //Retailers
    <string name="landing">Grow Your Business</string>
    <string name="landingD">Boost your online presence. Reach more people, sell more.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="work">How Njia Works</string>
    <string name="retailer">Username/Email</string>
    <string name="pass">Password</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="rem">Remember me</string>
    <string name="newAcc">create account</string>
    <string name="Name">Full Name</string>
    <string name="uName">User Name</string>
    <string name="uEmail">Email</string>
    <string name="uPhone">Phone Number</string>
    <string name="next">Next</string>
    <string name="Gender">Choose Gender</string>
    <string name="Age">Select Age</string>
    <string name="title_activity_otp">OTP</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    //OTP Verification
    <string name="otpText">Code</string>
    <string name="otpVerification">Verification</string>
    <string name="otpDescription">Enter one time password sent to phone number</string>
    <string name="entPass">Enter your email address</string>
    <string name="select">Make Selection</string>
    <string name="selectAcc">Select method to change your password details.</string>
    <string name="passUpdate">Your Password has been Updated</string>


</resources>