<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".Common.LoginSignUp.VerifyOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel"
            app:tint="@color/black"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otpText"
            android:textSize="100sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otpVerification"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:textAllCaps="true"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otpDescription"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <com.chaos.view.PinView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            app:lineColor="@color/black"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Verify Code"
            android:textColor="@color/black"/>


    </LinearLayout>

</ScrollView>